tests/ui/lifetimes/mismatched-lifetime-syntaxes-details/static.stderr
error: eliding a lifetime that's named elsewhere is confusing
  --> $DIR/static.rs:16:33
   |
LL | fn ampersand(x: &'static u8) -> &u8 {
   |                  -------        ^^^ the same lifetime is elided here
   |                  |
   |                  the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
note: the lint level is defined here
  --> $DIR/static.rs:1:9
   |
LL | #![deny(mismatched_lifetime_syntaxes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consistently use `'static`
   |
LL | fn ampersand(x: &'static u8) -> &'static u8 {
   |                                  +++++++

error: hiding a lifetime that's named elsewhere is confusing
  --> $DIR/static.rs:23:32
   |
LL | fn brackets(x: &'static u8) -> Brackets {
   |                 -------        ^^^^^^^^ the same lifetime is hidden here
   |                 |
   |                 the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: consistently use `'static`
   |
LL | fn brackets(x: &'static u8) -> Brackets<'static> {
   |                                        +++++++++

error: hiding a lifetime that's named elsewhere is confusing
  --> $DIR/static.rs:30:29
   |
LL | fn comma(x: &'static u8) -> Comma<u8> {
   |              -------        ^^^^^^^^^ the same lifetime is hidden here
   |              |
   |              the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: consistently use `'static`
   |
LL | fn comma(x: &'static u8) -> Comma<'static, u8> {
   |                                   ++++++++

error: eliding a lifetime that's named elsewhere is confusing
  --> $DIR/static.rs:35:35
   |
LL | fn underscore(x: &'static u8) -> &'_ u8 {
   |                   -------         ^^ the same lifetime is elided here
   |                   |
   |                   the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: consistently use `'static`
   |
LL - fn underscore(x: &'static u8) -> &'_ u8 {
LL + fn underscore(x: &'static u8) -> &'static u8 {
   |

error: aborting due to 4 previous errors

